--- a/first_app/templates/base.html
+++ b/first_app/templates/base.html
@@ -32,6 +32,13 @@
 
         {% endblock %}
     </div>
+    <footer style="background-color:black;padding:100 80 100 20; margin-top:80px">
+      <div style="padding-left:500px; padding-bottom:40px; padding-top:20px; color:white">
+        Mohammad Aminul Islam<br>
+        Department of Computer Science and Engineering<br>
+        BGC Trust University Bangladesh</div>
+    </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
   </body>
 </html>
